<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/purple_200"
    tools:context=".Activities.updateDialog">

    <EditText
        android:id="@+id/upShopName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/upShopAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/address" />

    <EditText
        android:id="@+id/upShopMob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/contact"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnUpdateData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/upShop"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:padding="10dp"
        android:background="@color/yellow"/>


</LinearLayout>


